CSS – Hojas de estilo en cascada. finalizado el formato al formulario.

--- a/tp3_SuarezDarioOscar/src/main/resources/templates/index.html
+++ b/tp3_SuarezDarioOscar/src/main/resources/templates/index.html
@@ -117,9 +117,10 @@ Es importante abordar el cambio climático de manera efectiva y rápida para evi
 </ul>
 </aside>
 </main>	
-<footer>
-<h2>Contacto</h2>
-<table border="1">
+<footer id="pieDePagina">
+<h2 class="tituloDeTabla">Contacto</h2>
+<br>
+<table class="tablaContacto">
 <tr><th>E-mail</th> 
     <th>Facebook</th>
 </tr>
